--- a/videocall/src/main/resources/static/videocall.html
+++ b/videocall/src/main/resources/static/videocall.html
@@ -33,8 +33,8 @@ window.onload = function () {
     const roomID = getUrlParams(window.location.href)['roomID'] || (Math.floor(Math.random() * 10000) + "");
     const userID = Math.floor(Math.random() * 10000) + "";
     const userName = "userName" + userID;
-    const appID = 1779818804;
-    const serverSecret = "dccf436993c5f4e6e236adee026d53e3";
+    const appID = 1580783461;
+    const serverSecret = "723c8843b4278b6d148c182c8a53362a";
     const kitToken = ZegoUIKitPrebuilt.generateKitTokenForTest(appID, serverSecret, roomID, userID, userName);
 
     
@@ -49,8 +49,8 @@ window.onload = function () {
                 mode: ZegoUIKitPrebuilt.VideoConference,
             },
                 
-           	turnOnMicrophoneWhenJoining: true,
-           	turnOnCameraWhenJoining: true,
+           	turnOnMicrophoneWhenJoining: false,
+           	turnOnCameraWhenJoining: false,
            	showMyCameraToggleButton: true,
            	showMyMicrophoneToggleButton: true,
            	showAudioVideoSettingsButton: true,
